# bicudo

./: .gitignore  .project  CMakeCache.txt  CMakeLists.txt  README.md  ekg-build.bat  task.bat  task.cmd
docs/: splash.vsh
include/bicudo/: bicudo.hpp
include/bicudo/assets/: shader.hpp
include/bicudo/core/: core.hpp
include/bicudo/direct/: asset.hpp  assetservice.hpp  display.hpp  displayservice.hpp  scene.hpp  sceneservice.hpp
include/bicudo/graphics/: gpubuffer.hpp  gpufeature.hpp  gpupipeline.hpp  gpurenderable.hpp  gpustructures.hpp
include/bicudo/physic/: physicsat.hpp
include/bicudo/platform/: contextoverview.hpp  openglcontextoverview.hpp  platform.hpp
include/bicudo/service/: service.hpp  servicedisplay.hpp  servicescene.hpp
include/bicudo/util/: file.hpp  logger.hpp  math.hpp  priority.hpp
source/bicudo/: bicudo.hpp
source/bicudo/core/: core.hpp  mixin.hpp  profile.hpp
source/bicudo/direct/: display.hpp  scene.hpp
source/bicudo/feature/: feature.hpp  service.hpp
source/bicudo/gpu/: buffering.hpp  drive_impl_manager.hpp  driver_impl_manager.hpp  glimpl.hpp  shading_program.hpp
source/bicudo/graphics/: gpubuffer.hpp  gpudirecttask.hpp  gpudynamicbatch.hpp  gpufeature.hpp  gpustructures.hpp  memorymetadata.hpp
source/bicudo/opengl/: opengl_context_overview.hpp  opengl_tools.hpp  openglcontextoverview.hpp  opengltools.hpp  shader.hpp
source/bicudo/physic/: rigid.hpp
source/bicudo/service/: service_display.hpp  service_physic_engine.hpp  service_scene.hpp  servicedisplay.hpp  servicephysicengine.hpp
source/bicudo/util/: logger.hpp  math.hpp
source/bicudo/utils/: math.hpp
source/src/: bicudo.cpp
source/src/core/: core.cpp  profile.cpp
source/src/direct/: display.cpp  scene.cpp
source/src/gpu/: buffering.cpp  driver_impl_manager.cpp  glimpl.cpp  shading_program.cpp
source/src/graphics/: gpubuffer.cpp  gpudynamicbatch.cpp  gpurenderable.cpp
source/src/opengl/: opengl_context_overview.cpp  opengl_tools.cpp  openglcontextoverview.cpp  opengltools.cpp  shader.cpp
source/src/physic/: physic_sat.cpp  rigid.cpp
source/src/service/: service_display.cpp  service_physic_engine.cpp  service_scene.cpp  servicedisplay.cpp  servicephysicengine.cpp  servicescene.cpp
source/src/util/: file.cpp  logger.cpp  math.cpp
source/src/utils/: math.cpp
src/: bicudo.cpp  main.cpp
src/api/client/: bicudo.cpp  bicudo.h  context.cpp  context.h  instance.cpp  instance.h
src/api/feature/: feature.cpp  feature.h
src/api/gui/: gui.cpp  gui.h
src/api/module/: module.cpp  module.h  module_abstract.cpp  module_abstract.h  module_manager.cpp  module_manager.h  module_service.cpp  module_service.h
src/api/physic/: physic_service.cpp  physic_service.h  rigid.cpp  rigid.h
src/api/render/: camera.cpp  camera.h  font_renderer.cpp  font_renderer.h  shader.cpp  shader.h  tessellator.cpp  tessellator.h
src/api/scene/: scene.cpp  scene.h  scene_abstract.cpp  scene_abstract.h  scene_manager.h  (+2 more)
src/core/: core.cpp
src/direct/: asset.cpp  assetservice.cpp  display.cpp  displayservice.cpp  scene.cpp  sceneservice.cpp
src/graphics/: gpubuffer.cpp  gpupipeline.cpp  gpurenderable.cpp
src/impl/: loader.cpp  loader.h
src/includes/: includes.cpp  includes.h
src/physic/: physicsat.cpp
src/platform/: openglcontextoverview.cpp
src/service/: servicescene.cpp
src/util/: file.cpp
tests/: starter.cpp  starter.hpp  startup.cpp
(+99 files in other folders)
